fixed dashboard height
Dashboard was filling the viewport from its grid
position and then extra space bellow causing a
scroll wheel, so now I use calc(100vh - 150px) since
its displaced down 150px due to its grid row
starting at 2, aka 150px down. I was thinking
I could just use height 100vh like my side menu
but that isnt displaced down at all.

--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,17 @@ body {
 
 
 .uppermenu {
+  position: relative;
   background-color: rgb(255, 255, 255);
   grid-column: 2 / 5;
+  box-shadow: 2px 5px 5px 1px rgb(206, 211, 218);
 }
 
 .dashboard {
   background-color: rgba(226, 232, 240, 1);
   grid-row-start: 2;
   grid-column: 2 / 5;
-  height: 100vh;
+  grid-row-end: end;
+  
+  height: calc(100vh - 150px);
 }
